Added attestate result

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -43,7 +43,7 @@
     <footer class='footer mt-auto'>
         <div class='container'>
             <div class='row'>
-                <span class='fs-6'>© 2022 Фонд содействия развитию военного образования совместно с ГК "Геоскан"</span>
+                <span class='fs-6'>© 2022 <a class='footer_link' href='https://fsrvo.ru'>Фонд содействия развитию военного образования</a> совместно с <a class='footer_link' href='https://geoscan.aero'>ГК "Геоскан"</a></span>
             </div>
         </div>
     </footer>
