--- a/main/templates/main/report.html
+++ b/main/templates/main/report.html
@@ -13,7 +13,7 @@
         <div class="col-4">
         </div>
         <div class="col-4">
-            Form
+            <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/cloud/6239b6ead2d783936d3c5483/?iframe=1" frameborder="0" name="ya-form-6239b6ead2d783936d3c5483" width=100%></iframe>
         </div>
         <div class="col-4">
         </div>
