--- a/main/templates/main/attestate.html
+++ b/main/templates/main/attestate.html
@@ -16,6 +16,9 @@
                     Вопросов: {{item.questions}}
                 </h5>
                 <h5 class="card-text ms-2 fw-normal">Время на выполнение аттестации: {{item.time}} минут</h5>
+                {% if item.ended %}
+                <a href="{% url 'attestate_result' %}" class="btn btn btn-success col-8 mx-auto mb-2">Перейти к итогам</a>
+                {% else %}
                 <button class="btn btn-primary col-8 mx-auto mb-2" type='button' data-bs-toggle="modal" data-bs-target='#staticBackdrop{{item.id}}'>Начать аттестацию</button>
                 <div class="modal fade" id="staticBackdrop{{item.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog">
@@ -33,8 +36,9 @@
                             <a href="{% url 'one_attestate' item.number %}" class="btn btn-primary col-8 mx-auto mb-2">Перейти к аттестации</a>
                         </div>
                       </div>
-                    </div>
-                  </div>
+                    </div>  
+                </div>
+                {% endif %}
             </div>
             {% endfor %}
         </div>
