--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -102,7 +102,8 @@
             </div>
         </div>
         <div class="d-none d-lg-block col-lg-3 border border-bottom-0 mt-3">
-            Google Calendar
+            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23ffffff&ctz=Europe%2FMoscow&title=%D0%A4%D0%BE%D0%BD%D0%B4%20%D0%A1%D0%A0%D0%92%D0%9E&showTitle=0&showNav=0&showDate=0&showPrint=0&showCalendars=0&showTz=0&showTabs=0&src=NW5pYmFrOTBjODUxa3M5dW1sN2NkcjJjYjBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%237CB342" style="border:solid 1px #777" width=100% height=50% frameborder="0" scrolling="no"></iframe>
+            
         </div>
     </div>
 </div>
