--- a/main/templates/main/one_quiz.html
+++ b/main/templates/main/one_quiz.html
@@ -24,7 +24,7 @@
         <div class="col-md-3 col-lg-3"></div>
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 mt-2">
             {% if quiz %}
-                <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src={{quiz}} frameborder="0" name="" width=100%></iframe>
+                <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src={{quiz}} frameborder="0" name="ya-form-6235dbe6dd6f63dab89b27a9" width=100%></iframe>
             {% else %}
                 <p class="fs-4">Данная аттестация еще не готова</p>
                 <p class="fs-4"><a href="{% url 'attestate' %}">Вернуться на страницу аттестаций</a>
