--- a/main/templates/main/rangs_students.html
+++ b/main/templates/main/rangs_students.html
@@ -19,7 +19,11 @@
                 <tbody>
                     {% for student in students %}
                     <tr class="d-flex">
-                        <th class='col-2'><span class='ms-1'>{{student.rank}}</span></th>
+                        {% if student.rank != None %}
+                            <th class='col-2'><span class='ms-1'>{{student.rank}}</span></th>
+                        {% else %}
+                            <th class='col-2'><span class='ms-1'>0</span></th>
+                        {% endif %}
                         <td class='col-5'>{{student.user.last_name}} {{student.user.first_name}}</td>
                         <td class='col-5'>{{student.school_name}}</td>
                     </tr>
