--- a/main/templates/main/attestate.html
+++ b/main/templates/main/attestate.html
@@ -8,6 +8,12 @@
     <div class="row">
         <div class="col-3"></div>
         <div class="col-6">
+            <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Аттестации</li>
+                </ol>
+            </nav>
             {% for item in quiz %}
             <div class="card mt-2">
                 <h4 class="card-title ms-2">{{item.name}}</h4>
