--- a/main/templates/main/attestate_result.html
+++ b/main/templates/main/attestate_result.html
@@ -8,7 +8,14 @@
     <div class="row">
         <div class="col-md-1 col-lg-1 d-sm-block d-none"></div>
         <div class="col-xs-12 col-md-10 col-ld-10">
-            <p class='fs-2 text-center'>Итоги первой аттестации</p>
+            <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'attestate' %}">Аттестации</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Итоги аттестации 1</li>
+                </ol>
+            </nav>
+            <p class='fs-2 text-center'>Итоги первой аттестации | <a href="{% url 'attestate_answers' 1 %}">Правильные ответы</a></p>
             <table class="table table-striped table-bordered table-hover student-rangs">
                 <thead>
                     <tr class="">
