--- a/main/templates/main/files.html
+++ b/main/templates/main/files.html
@@ -5,6 +5,12 @@
 {% endblock %}
 {% block body %}
 <div class="container-fluid mt-2">
+    <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Учебные материалы</li>
+        </ol>
+    </nav>
     <p class='fs-3 text-center'>Учебные материалы</p>
     <div class="row">
         <div class='col-md-1 col-lg-1'></div>
