--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -10,6 +10,12 @@
     </div>
 
     <div class="col-md-8 col-lg-8 d-sm-block d-none border">
+        <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Новости</li>
+            </ol>
+        </nav>
         <h1>Новости</h1>
         {% for item in page_obj %}
         <div class="card text-left mt-1">
