--- a/main/templates/main/rangs.html
+++ b/main/templates/main/rangs.html
@@ -8,6 +8,12 @@
     <div class="row">
         <div class="col-md-3 col-lg-3"></div>
         <div class="col-xs-12 col-md-6 col-ld-6">
+            <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Ранги</li>
+                </ol>
+            </nav>
             <div class="row">
                 <div class="col-lg-6 mb-2 mt-2">
                     <a href='{% url "rangs_school" id=1 %}' class="btn btn-outline-primary btn-lg align-center">Рейтинг учебных заведений</a>
